--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,9 +18,13 @@ steps:
     jdkVersionOption: '1.8'
     jdkArchitectureOption: 'x64'
     goals: 'install'
+
+- task
+   inputs:
+     netstat -tlpen | grep 8080
+     ufw allow 8080
+
 - task: TomcatDeployment@1
-  netstat -tlpen | grep 8080
-  ufw allow 8080
   inputs:
     TomcatUrl: 'http://localhost:8080'
     Username: 'admin'
